Remove updateStatuses method (first one)
Signed-off-by: Slimane AMAR <amarsli@gm0winl104.bureau.si.interne>